--- a/config.html
+++ b/config.html
@@ -58,7 +58,12 @@
                         <a class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1 cursor-pointer menuToggle">Reviews</a>
                     </div>
                     <div id="overview" class="menuTab">
-                        <p class="leading-relaxed mb-4">A raglan style modular jumper kit that you build at home using a tactile tool kit; chunky wooden needle, chunky yarn and a guide manual.</p>
+                        <p class="leading-relaxed mb-2">A raglan style modular jumper kit that you build at home using a tactile tool kit; chunky wooden needle, chunky yarn and a guide manual.</p>
+                        <p class="leading-relaxed mb-2">‘Join the Jumper’ will arrive at your home in a kit equipped with: 13 lambswool panel pieces to construct your garment with, lots of squidgy yarn, tactile tools and a guide manual to help you along your sewing journey.</p>
+                            
+                        <p class="leading-relaxed mb-2">Made with 100% Scottish lambswool in Scotland, designed by a Finn!</p>
+                            
+                        <p class="leading-relaxed mb-4">Adult supervision recommended, not suitable for under 3’s due to small parts!</p>
                         <div class="flex border-t border-gray-300 py-2">
                             <span class="text-gray-500">Color</span>
                             <div class="ml-auto flex">
@@ -110,24 +115,12 @@
                         </div>
                         <div class="flex">
                             <span class="title-font font-medium text-2xl text-gray-900">£95.00</span>
-                            <button class="flex ml-auto text-white bg-red-700 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Add To Cart</button>
+                            <button class="flex ml-auto text-white bg-red-700 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded">Add To Cart</button>
                         </div>
                     </div>
                     <div id="customize" class="menuTab">
                         <div class="options">
                             <form action="">
-                                <div class="mb-3">
-                                    <label class="mb-1 inline-block" for="">Size:</label>
-                                    <div class="size btn_grid">
-                                        <select name="" id="" class="px-2 py-1 border-solid border-2 border-gray-300">
-                                            <option value="2-3">2-3 Years</option>
-                                            <option value="4-5">4-5 Years</option>
-                                            <option value="6-7">6-7 Years</option>
-                                            <option value="8-9">8-9 Years</option>
-                                            <option value="10-11">10-11 Years</option>
-                                        </select>
-                                    </div>
-                                </div>
 
                                 <div class="mb-3">
                                     <label class="mb-1 inline-block" for="">Body:</label>
