--- a/home.html
+++ b/home.html
@@ -11,10 +11,9 @@
     <link rel="icon" href="img/jumper-ico.png">
 </head>
 </head>
-<body class="overflow-x-hidden">
-
+<body>
+  <button onclick="topFunction()" id="myBtn" class="hidden fixed bg-red-700 text-white cursor-pointer p-4 rounded-full" title="Go to top">Top</button>
 <!--HERO-->
-
     <section class="text-gray-700 body-font h-screen overflow-x-hidden view">
         <header class="h-auto md:h-20 text-gray-700 body-font fixed w-full bg-white border-b-2 border-gray-200 z-50">
             <div class="container mx-auto flex px-5 py-2 md:p-5 flex-row items-center justify-between">
@@ -42,7 +41,7 @@
           </header>
           <div class="spacer"></div>
           <div class="flex items-end md:items-center w-full bg-hero-img bg-cover hero-height bg-left-top">
-            <div class="container mx-auto" data-aos="fade-left"
+            <div class="container mx-auto text-center" data-aos="fade-left"
             data-aos-duration="2000">
               <div class="bg-white w-full lg:w-1/2 p-6">
                 <h1 class="text-2xl md:text-4xl mb-6 font-thin uppercase">Clothes that <span class="text-red-700 highlight">kids</span> can make</h1>
@@ -66,8 +65,8 @@
       </section>
 
 <!--MISSION-->
-      <section>
-        <div class="container mx-auto text-center px-2 md:px-0 py-12 md:py-24" data-aos="fade-up">
+      <section class="overflow-x-hidden">
+        <div class="container mx-auto text-center px-4 md:px-0 py-12 md:py-24" data-aos="fade-up">
           <h1 class="text-2xl mb-8 highlight">Our <span class="text-red-700">Mission</span></h1>
           <p class="mb-8 max-w-screen-lg mx-auto text-gray-700">Where children will be the future thinkers, decision makers and citizens. By using earthe’s resources, we, adults, make products for children to use and enjoy. How do these products impact the child when they are a grown up? As adults, we can choose for these products to have a positive, or a negative impact on future generations.</p>
           <p class="mb-8 max-w-screen-lg mx-auto text-gray-700">Inspired by theories of Maria Montessori and Friedrich Froebel, combined with circular economy thinking, The Convertibles offer future proof kidswear that holistically considers the end user; the child. From participatory learning activities through to sourcing raw materials and an end-of-life plan of the products, future generations and their world is looked after. Waste becomes no more, and the use natural resources is maximised.</p>
@@ -81,10 +80,10 @@
           data-aos-duration="1500">
             <img class="m-0 w-full" src="img/grid-1.jpg" alt="A group of children wearing Convertibles garments">
             <div class="bg-white absolute cover-card">
-              <div class="max-w-md p-4">
+              <div class="max-w-md p-4 mx-auto text-center md:text-left">
                 <h2 class="text-xl text-red-700 font-bold">Old Meets New</h2>
                 <p class="text-gray-700 mb-4">Learn more about what makes Convertibles so unique. And why parents and the planet love them.</p>
-                <button class="text-lg px-4 py-2 mr-6 border-solid border border-gray-800">About Us <span class="ml-4">
+                <button class="text-lg px-4 py-2 md:mr-6 border-solid border border-gray-800">About Us <span class="ml-4">
                   <svg class="inline" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0.292969 1.61767L4.58597 5.99075L0.292969 10.3638L1.70697 11.8042L7.41397 5.99075L1.70697 0.177296L0.292969 1.61767Z" fill="#414141"/>
                   </svg>
@@ -97,7 +96,7 @@
             <div class="mb-8" data-aos="fade-left"
             data-aos-duration="1500">
               <img class="mb-4 w-full" src="img/grid-2.jpg" alt="A child assembling a Convertibles kit">
-              <div class="ml-4 md:ml-0 max-w-md">
+              <div class="ml-4 md:ml-0 max-w-md text-center md:text-left">
                 <h2 class="text-xl text-red-700 font-bold">Build Children's Abilities</h2>
                 <p class="text-gray-700">Help develop a child’s dexterity and creativity in a fun and interactive way.</p>
               </div>
@@ -105,7 +104,7 @@
             <div class="mb-8" data-aos="fade-left"
             data-aos-duration="1500">
               <img class="mb-4 w-full" src="img/grid-3.jpg" alt="A Convertibles Join the Jumper kit laid out in its components">
-              <div class="ml-4 md:ml-0 max-w-md">
+              <div class="ml-4 md:ml-0 max-w-md text-center md:text-left">
                 <h2 class="text-xl text-red-700 font-bold">Sustainable Materials</h2>
                 <p class="text-gray-700">Every convertibles kit is made with 100% biodegradable scottish lambswool.</p>
               </div>
@@ -114,58 +113,75 @@
         </div>
       </section>
 
-<!--BRYCE-->
+<!--BRYCE
       <section>
         <div class="container mx-auto pb-24">
 
         </div>
-      </section>
-
-<!--JAMES-->
+      </section> -->
 
 <!--ROLANDAS-->
-      <section>
+      <section class="overflow-x-hidden">
         <div class="container mx-auto pb-24">
           <section class="text-gray-700 body-font">
-            <div class="container px-5 py-24 mx-auto">
-              <div class="flex flex-col text-center w-full mb-20">
-                <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">The Variety of Customization</h1>
-                <p class="lg:w-3/4 mx-auto leading-relaxed text-base">
+            <div class="container px-4 mx-auto">
+              <div class="flex flex-col text-center w-full mb-20" data-aos="fade-up">
+                <h2 class="text-2xl font-medium title-font mb-4 highlight">The Variety of <span class="text-red-700">Customization</span></h2>
+                <p class="mb-8 max-w-screen-lg mx-auto text-gray-700">
                   The Convertibles adapt to growth spurts by adding more panels, accompanying the child along their adventures for various years, 
                   maximising the natural resources extracted to make these garments, minimising textile waste.
-                
-                Stitching on the outside of the Convertibles celebrates the beauty of the handmade, our unique marks we make, and allows this fundamental building block of a garment to stand in the limelight that it deserves.
+                </p>
+                <p class="mb-8 max-w-screen-lg mx-auto text-gray-700">
+                  Stitching on the outside of the Convertibles celebrates the beauty of the handmade, our unique marks we make, and allows this fundamental building block of a garment to stand in the limelight that it deserves.
                 </p>
               </div>
               <div class="flex flex-wrap -m-4">
-                <div class="lg:w-1/3 sm:w-1/2 p-4">
-                  <div class="flex relative">
+                <div class="lg:w-1/3 sm:w-1/2 p-4" data-aos="fade-right"
+                data-aos-duration="1500">
+                  <div class="flex relative mb-4 sm:mb-0">
                     <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center object-scale-down" src="img/image-gallery1.png">
-                    <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100">
+                    <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100 hover-card">
                       <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">The Start</h2>
                       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Starting Small</h1>
                       <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                     </div>
                   </div>
+                  <div class="px-4 py-5 w-full border-2 border-red-400 bg-white block sm:hidden">
+                    <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">The Start</h2>
+                    <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Starting Small</h1>
+                    <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+                  </div>
                 </div>
-                <div class="lg:w-1/3 sm:w-1/2 p-4">
-                  <div class="flex relative">
+                <div class="lg:w-1/3 sm:w-1/2 p-4" data-aos="fade-up"
+                data-aos-duration="1500" data-aos-delay="300">
+                  <div class="flex relative mb-4 sm:mb-0">
                     <img alt="gallery" class="absolute inset-0 w-full h-full object-fit object-center object-scale-down" src="img/image-gallery3.png">
-                    <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100">
+                    <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100 hover-card">
                       <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">Growth Spurt</h2>
                       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Grown Up</h1>
                       <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                     </div>
                   </div>
+                  <div class="px-4 py-5 w-full border-2 border-red-400 bg-white block sm:hidden">
+                    <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">Growth Spurt</h2>
+                    <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Grown Up</h1>
+                    <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+                  </div>
                 </div>
-                <div class="lg:w-1/3 sm:w-1/2 p-4">
-                  <div class="flex relative">
+                <div class="lg:w-1/3 sm:w-1/2 p-4" data-aos="fade-left"
+                data-aos-duration="1500" data-aos-delay="600">
+                  <div class="flex relative mb-4 sm:mb-0">
                     <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center object-scale-down" src="img/image-gallery2.png">
-                    <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100">
+                    <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100 hover-card">
                       <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">Customizations</h2>
                       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Maybe Add a Skirt?</h1>
                       <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                     </div>
+                  </div>
+                  <div class="px-4 py-5 w-full border-2 border-red-400 bg-white block sm:hidden">
+                    <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">Customizations</h2>
+                    <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Maybe Add a Skirt?</h1>
+                    <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                   </div>
                 </div>              
               </div>
@@ -175,11 +191,12 @@
 
 
         <!--IMAGE STEPS CAROUSEL TESTING-->
-        <section class="text-gray-700 body-font">
-          <div class="container px-5 py-24 mx-auto flex flex-wrap">
+        <section class="text-gray-700 body-font overflow-x-hidden">
+          <div class="container px-4 pb-24 mx-auto flex flex-wrap">
             <div class="flex flex-wrap w-full">
               <div class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6">
-                <div class="flex relative pb-12">
+                <div class="flex relative pb-12" data-aos="fade-right"
+                data-aos-duration="1500" data-aos-delay="0">
                   <div class="h-full w-10 absolute inset-0 flex items-center justify-center">
                     <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
                   </div>
@@ -193,7 +210,8 @@
                     <p class="leading-relaxed">We source our wool in Scotland which is 100% environmentally friendly.  </p>
                   </div>
                 </div>
-                <div class="flex relative pb-12">
+                <div class="flex relative pb-12" data-aos="fade-right"
+                data-aos-duration="1500" data-aos-delay="0">
                   <div class="h-full w-10 absolute inset-0 flex items-center justify-center">
                     <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
                   </div>
@@ -207,7 +225,8 @@
                     <p class="leading-relaxed">The convertables are then created with your child’s chosen colours and design.</p>
                   </div>
                 </div>
-                <div class="flex relative pb-12">
+                <div class="flex relative pb-12" data-aos="fade-right"
+                data-aos-duration="1500" data-aos-delay="0">
                   <div class="h-full w-10 absolute inset-0 flex items-center justify-center">
                     <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
                   </div>
@@ -221,7 +240,8 @@
                     <p class="leading-relaxed">The child builds their fully customizable convertable.</p>
                   </div>
                 </div>
-                <div class="flex relative pb-12">
+                <div class="flex relative pb-12" data-aos="fade-right"
+                data-aos-duration="1500" data-aos-delay="0">
                   <div class="h-full w-10 absolute inset-0 flex items-center justify-center">
                     <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
                   </div>
@@ -236,7 +256,8 @@
                     <p class="leading-relaxed">As the child grows they can make their convertable grow with them!</p>
                   </div>
                 </div>
-                <div class="flex relative">
+                <div class="flex relative" data-aos="fade-right"
+                data-aos-duration="1500" data-aos-delay="0">
                   <div class="flex-shrink-0 w-10 h-10 rounded-full bg-red-600 inline-flex items-center justify-center text-white relative z-10">
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
                       <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
@@ -256,10 +277,10 @@
       </section>
 
 <!--CALLUM-->
-      <section>
+      <section class="overflow-x-hidden">
         <div class="container mx-auto pb-24">
           <section class="text-gray-700 body-font">
-            <div class="container px-5 py-24 mx-auto flex flex-wrap">
+            <div class="container px-4 pb-24 mx-auto flex flex-wrap">
               <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden">
                 <img alt="feature" class="object-cover object-center h-full w-full" src="img/section-callum-img1.png">
               </div>
@@ -307,8 +328,8 @@
             </div>
             
           </section>
-          <section class="text-gray-700 body-font">
-            <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+          <section class="text-gray-700 body-font overflow-x-hidden">
+            <div class="container mx-auto flex px-4 pb-24 md:flex-row flex-col items-center">
               <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-red-700">CONVERTIBLES CELEBRATE
                   <br class="hidden lg:inline-block">THE HAND-STITCH
@@ -439,7 +460,7 @@
 
         <!--FOOTER-->
         <footer class="text-gray-700 body-font">
-          <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+          <div class="container px-4 py-8 mx-auto flex items-center sm:flex-row flex-col">
             <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
               <img class="h-8" src="img/almaborealis-logo.png" alt="">
             </a>
