FIX grid text alingment on mobile and tablet

--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
           </header>
           <div class="spacer"></div>
           <div class="flex items-end md:items-center w-full bg-hero-img bg-cover hero-height bg-left-top">
-            <div class="container mx-auto text-center" data-aos="fade-left"
+            <div class="container mx-auto text-center md:text-left" data-aos="fade-left"
             data-aos-duration="2000">
               <div class="bg-white w-full lg:w-1/2 p-6">
                 <h1 class="text-2xl md:text-4xl mb-6 font-thin uppercase">Clothes that <span class="text-red-700 highlight">kids</span> can make</h1>
@@ -96,7 +96,7 @@
             <div class="mb-8" data-aos="fade-left"
             data-aos-duration="1500">
               <img class="mb-4 w-full" src="img/grid-2.jpg" alt="A child assembling a Convertibles kit">
-              <div class="ml-4 md:ml-0 max-w-md text-center md:text-left">
+              <div class="md:ml-0 max-w-md text-center md:text-left mx-auto">
                 <h2 class="text-xl text-red-700 font-bold">Build Children's Abilities</h2>
                 <p class="text-gray-700">Help develop a child’s dexterity and creativity in a fun and interactive way.</p>
               </div>
@@ -104,7 +104,7 @@
             <div class="mb-8" data-aos="fade-left"
             data-aos-duration="1500">
               <img class="mb-4 w-full" src="img/grid-3.jpg" alt="A Convertibles Join the Jumper kit laid out in its components">
-              <div class="ml-4 md:ml-0 max-w-md text-center md:text-left">
+              <div class="md:ml-0 max-w-md text-center md:text-left mx-auto">
                 <h2 class="text-xl text-red-700 font-bold">Sustainable Materials</h2>
                 <p class="text-gray-700">Every convertibles kit is made with 100% biodegradable scottish lambswool.</p>
               </div>
