--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                               <path d="M5 12h14M12 5l7 7-7 7"></path>
                           </svg>
                     </a>
-                <button class="lg:hidden burger" onclick="myFunction()">
+                <button class="lg:hidden burger cursor-pointer" onclick="menuToggle()">
                     <svg stroke="currentColour" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M22 18.005C22 18.555 21.554 19 21.005 19H12.995C12.7311 19 12.478 18.8952 12.2914 18.7086C12.1048 18.522 12 18.2689 12 18.005C12 17.7411 12.1048 17.488 12.2914 17.3014C12.478 17.1148 12.7311 17.01 12.995 17.01H21.005C21.555 17.01 22 17.455 22 18.005V18.005Z" fill="black"/>
                         <path d="M22 11.9999C22 12.5499 21.554 12.9949 21.005 12.9949H2.995C2.73111 12.9949 2.47803 12.8901 2.29143 12.7035C2.10483 12.5169 2 12.2638 2 11.9999C2 11.736 2.10483 11.4829 2.29143 11.2963C2.47803 11.1097 2.73111 11.0049 2.995 11.0049H21.005C21.555 11.0049 22 11.4509 22 11.9999V11.9999Z" fill="black"/>
