ADD setup for video lightbox

--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
                     </a>
                     <a href="config.html" class="text-lg text-red-700 md:text-2xl md:px-4 md:py-2 md:text-white md:bg-red-700">Convertibles <span class="ml-2 md:ml-4">
                       <svg class="inline text-white" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0.292969 1.61767L4.58597 5.99075L0.292969 10.3638L1.70697 11.8042L7.41397 5.99075L1.70697 0.177296L0.292969 1.61767Z" fill="#414141"/>
+                        <path d="M0.292969 1.61767L4.58597 5.99075L0.292969 10.3638L1.70697 11.8042L7.41397 5.99075L1.70697 0.177296L0.292969 1.61767Z" fill="#ffffff"/>
                       </svg>
                     </span></a>
                 </div>
@@ -65,7 +65,10 @@
       </section>
 
 <!--MISSION-->
-      <section class="overflow-x-hidden">
+      <section>
+        <section class="hidden container mx-auto pt-24">
+          <iframe class="mx-auto" width="100%" height="800px" src="https://www.youtube.com/embed/Lu8M-jBOHPg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
         <div class="container mx-auto text-center px-4 md:px-0 py-12 md:py-24" data-aos="fade-up">
           <h1 class="text-2xl mb-8 highlight">Our <span class="text-red-700">Mission</span></h1>
           <p class="mb-8 max-w-screen-lg mx-auto text-gray-700">Where children will be the future thinkers, decision makers and citizens. By using earthe’s resources, we, adults, make products for children to use and enjoy. How do these products impact the child when they are a grown up? As adults, we can choose for these products to have a positive, or a negative impact on future generations.</p>
@@ -338,12 +341,12 @@
 
                   It may be a little wobbly to start with, let’s offer it a platform to grow! Stitching on the outside of the Convertibles celebrates the beauty of the handmade, our unique marks we make, and allows this fundamental building block of a garment to stand in the limelight that it deserves.</p>
                 <div class="flex justify-center">
-                  <button class="inline-flex text-white bg-red-600 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">More</button>
+                  <button class="inline-flex text-white bg-red-600 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">More</button>
                 </div>
                 
               </div>
               <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-                <img class="object-cover object-center rounded" alt="hero" src="img/section-callum-img2.png">
+                <img class="object-cover object-center" alt="hero" src="img/section-callum-img2.png">
               </div>
             </div>
           </section>
