--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 </head>
 </head>
 <body>
-  <button onclick="topFunction()" id="myBtn" class="hidden fixed bg-red-700 text-white cursor-pointer p-4 rounded-full" title="Go to top">Top</button>
+  <button onclick="topFunction()" id="myBtn" class="opacity-0 fixed bg-red-700 text-white cursor-pointer p-4 rounded hover:bg-red-600" title="Go to top">Top</button>
 <!--HERO-->
     <section class="text-gray-700 body-font h-screen overflow-x-hidden view">
         <header class="h-auto md:h-20 text-gray-700 body-font fixed w-full bg-white border-b-2 border-gray-200 z-50">
@@ -142,7 +142,7 @@
                 <div class="lg:w-1/3 sm:w-1/2 p-4" data-aos="fade-right"
                 data-aos-duration="1500">
                   <div class="flex relative mb-4 sm:mb-0">
-                    <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center object-scale-down" src="img/image-gallery1.png">
+                    <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center object-scale-down" src="img/image-gallery1.jpg">
                     <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100 hover-card">
                       <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">The Start</h2>
                       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Starting Small</h1>
@@ -158,7 +158,7 @@
                 <div class="lg:w-1/3 sm:w-1/2 p-4" data-aos="fade-up"
                 data-aos-duration="1500" data-aos-delay="300">
                   <div class="flex relative mb-4 sm:mb-0">
-                    <img alt="gallery" class="absolute inset-0 w-full h-full object-fit object-center object-scale-down" src="img/image-gallery3.png">
+                    <img alt="gallery" class="absolute inset-0 w-full h-full object-fit object-center object-scale-down" src="img/image-gallery3.jpg">
                     <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100 hover-card">
                       <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">Growth Spurt</h2>
                       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Grown Up</h1>
@@ -174,7 +174,7 @@
                 <div class="lg:w-1/3 sm:w-1/2 p-4" data-aos="fade-left"
                 data-aos-duration="1500" data-aos-delay="600">
                   <div class="flex relative mb-4 sm:mb-0">
-                    <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center object-scale-down" src="img/image-gallery2.png">
+                    <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center object-scale-down" src="img/image-gallery2.jpg">
                     <div class="px-8 py-10 relative z-10 w-full border-4 border-red-400 bg-white opacity-0 hover:opacity-100 hover-card">
                       <h2 class="tracking-widest text-sm title-font font-bold text-red-700 mb-1">Customizations</h2>
                       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Maybe Add a Skirt?</h1>
@@ -273,7 +273,7 @@
                   </div>
                 </div>
               </div>
-              <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="img/steps-carousel-image.png" alt="step">
+              <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="img/steps-carousel-image.jpg" alt="step">
             </div>
           </div>
         </section>
@@ -285,7 +285,7 @@
           <section class="text-gray-700 body-font">
             <div class="container px-4 pb-24 mx-auto flex flex-wrap">
               <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden">
-                <img alt="feature" class="object-cover object-center h-full w-full" src="img/section-callum-img1.png">
+                <img alt="feature" class="object-cover object-center h-full w-full" src="img/section-callum-img1.jpg">
               </div>
               <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center">
                 <div class="flex flex-col mb-10 lg:items-start items-center">
@@ -346,7 +346,7 @@
                 
               </div>
               <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-                <img class="object-cover object-center" alt="hero" src="img/section-callum-img2.png">
+                <img class="object-cover object-center" alt="hero" src="img/section-callum-img2.jpg">
               </div>
             </div>
           </section>
