DELETE unused CSS

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                     <a href="index.html" class="flex title-font font-medium items-center text-gray-900 mb-0 cursor-pointer">
                         <img src="img/almaborealis-logo.png" class="h-10" alt="Almaborealis logo">
                     </a>
-                    <nav class="hidden md:ml-auto md:block lg:flex flex-wrap items-center text-base justify-c enter">
+                    <nav class="hidden md:ml-auto md:block lg:flex flex-wrap items-center text-base justify-c">
                         <a class="mr-6 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">About</a>
                         <a class="mr-6 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">Shop</a>
                         <a class="mr-12 hover:text-gray-900 font-medium text-red-700 cursor-pointer hidden md:block">Contact</a>
