ADD new footer to config

--- a/config.html
+++ b/config.html
@@ -174,40 +174,39 @@
     </main>
 
     <!--FOOTER-->
-    <footer class="text-gray-700 body-font">
-        <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-          <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-            <img class="h-8" src="img/almaborealis-logo.png" alt="">
-          </a>
-          <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 Almaborealis —
-            <a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@almaborealis</a>
-          </p>
-          <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-            <a href="https://www.facebook.com/almaborealis/" class="text-gray-500 cursor-pointer">
-              <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+    <footer class="bg-red-500">
+        <div class="container px-4 py-8 mx-auto flex items-center sm:flex-row flex-col">
+            <a class="font-medium items-center md:justify-start justify-center">
+            <img class="h-8" src="img/almaborealis-logo-white.png" alt="Almaborealis logo">
+            </a>
+            <p class="text-sm text-white sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-white sm:py-2 sm:mt-0 mt-4">© 2020 Almaborealis —
+            <a href="https://twitter.com/knyttneve" class="text-white ml-1" rel="noopener noreferrer" target="_blank">@almaborealis</a>
+            </p>
+            <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+            <a href="https://www.facebook.com/almaborealis/" class="text-white cursor-pointer">
+                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                 <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-              </svg>
+                </svg>
             </a>
-            <a href="https://twitter.com/almaborealis?lang=en" class="ml-3 text-gray-500 cursor-pointer">
-              <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <a href="https://twitter.com/almaborealis?lang=en" class="ml-3 text-white cursor-pointer">
+                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                 <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-              </svg>
+                </svg>
             </a>
-            <a href="https://www.instagram.com/almaborealis/?hl=en" class="ml-3 text-gray-500 cursor-pointer">
-              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <a href="https://www.instagram.com/almaborealis/?hl=en" class="ml-3 text-white cursor-pointer">
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                 <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
                 <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-              </svg>
+                </svg>
             </a>
             <a class="ml-3 text-gray-500 cursor-pointer">
-              <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
-                <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
-                <circle cx="4" cy="4" r="2" stroke="none"></circle>
-              </svg>
+                <svg width="20" height="20" viewBox="0 0 211 148" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M206.596 23.1191C205.395 18.6423 203.04 14.5597 199.767 11.28C196.494 8.00018 192.417 5.63826 187.945 4.43057C171.485 8.99005e-07 105.5 0 105.5 0C105.5 0 39.5154 -8.99005e-07 23.0546 4.40701C18.5807 5.61078 14.5021 7.97139 11.2284 11.2518C7.95458 14.5321 5.6009 18.6168 4.40368 23.0955C-8.98327e-07 39.5924 0 74 0 74C0 74 -8.98327e-07 108.408 4.40368 124.881C6.82924 133.978 13.9882 141.142 23.0546 143.569C39.5154 148 105.5 148 105.5 148C105.5 148 171.485 148 187.945 143.569C197.035 141.142 204.171 133.978 206.596 124.881C211 108.408 211 74 211 74C211 74 211 39.5924 206.596 23.1191ZM84.5413 105.58V42.4204L139.175 73.7643L84.5413 105.58Z" fill="white"/>
+                </svg>  
             </a>
-          </span>
+            </span>
         </div>
-      </footer>
+    </footer>
 
     <script src="scripts/script.js"></script>
 </body>
